<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/profile_photo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/profile_photo"
                android:textColor="@color/selector_item_color"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_photo"
                android:layout_below="@+id/profile_photo_text"
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                app:civ_border_color="@color/selector_item_color"
                app:civ_border_width="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@+id/profile_photo"
                android:layout_marginStart="65dp"
                android:textColor="@color/link_blue"
                android:textSize="16sp"/>



            <!-- username section -->
            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/changeProfilePhoto"
                android:background="@drawable/grey_border_bottom">

                <TextView
                    android:id="@+id/username_discription"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="14dp"
                    android:gravity="bottom"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_below="@+id/username_discription"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/selector_item_color"
                    android:hint="@string/username"/>

            </RelativeLayout>


            <!-- display_name section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout1"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout2">

                <TextView
                    android:id="@+id/name_discription"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/display_name"
                    android:layout_marginStart="14dp"
                    android:gravity="bottom"/>

                <EditText
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_below="@+id/name_discription"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:hint="@string/display_name"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/selector_item_color" />

            </RelativeLayout>


            <!-- website section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout2"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout3">


                <TextView
                    android:id="@+id/website_discription"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="14dp"
                    android:gravity="bottom"
                    android:text="@string/website" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:id="@+id/website"
                    android:layout_below="@+id/website_discription"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/selector_item_color"
                    android:hint="@string/website"/>

            </RelativeLayout>


            <!-- description section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout3"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout4">


                <TextView
                    android:id="@+id/description_description"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/description"
                    android:layout_marginStart="14dp"
                    android:gravity="bottom"/>



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:id="@+id/description"
                    android:layout_below="@+id/description_description"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/selector_item_color"
                    android:hint="@string/description"/>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/private_information"
                android:layout_below="@id/relLayout4"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/selector_item_color"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/textPrivateInfo"/>


            <!-- email section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textPrivateInfo"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout5">

                <TextView
                    android:id="@+id/email_description"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/email"
                    android:layout_marginStart="14dp"
                    android:gravity="bottom"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:id="@+id/email"
                    android:layout_below="@+id/email_description"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/selector_item_color"
                    android:hint="@string/email"/>

            </RelativeLayout>

            <!-- phone number section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout5"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout6">


                <TextView
                    android:id="@+id/phone_description"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/phone"
                    android:layout_marginStart="14dp"
                    android:gravity="bottom"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneNumber"
                    android:layout_below="@+id/phone_description"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:textColorHint="@color/selector_item_color"
                    android:hint="@string/phone_number"/>

            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>
    </merge>